[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/chapters/road/Road.gd" type="Script" id=1]
[ext_resource path="res://assets/models/road/road.glb" type="PackedScene" id=2]
[ext_resource path="res://scenes/location/StartChapter.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/props/road/Car.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/car-crash.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/car-engine.ogg" type="AudioStream" id=6]
[ext_resource path="res://scenes/props/road/LampPole.tscn" type="PackedScene" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.562912, 1, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 10.5218, 1.53021, 1 )

[node name="Road" type="Spatial"]
script = ExtResource( 1 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 0.537049, 0, -0.843551, 0, 1, 0, 0.843551, 0, 0.537049, 0, 0, 0 )

[node name="RoadModel" parent="Pivot" instance=ExtResource( 2 )]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0 )

[node name="LineA" type="Spatial" parent="Pivot"]

[node name="LA1" parent="Pivot/LineA" instance=ExtResource( 4 )]
transform = Transform( -0.750653, 0, -0.660696, 0, 1, 0, 0.660696, 0, -0.750653, 43.5518, 0, -38.3326 )
turn_before_active = 2

[node name="LA2" parent="Pivot/LineA" instance=ExtResource( 4 )]
transform = Transform( 0.499909, 0, -0.866078, 0, 1, 0, 0.866078, 0, 0.499909, -26.9431, 0, -46.6782 )

[node name="LA3" parent="Pivot/LineA" instance=ExtResource( 4 )]
transform = Transform( -0.472289, 0, 0.881444, 0, 1, 0, -0.881444, 0, -0.472289, 27.593, 0, 51.4974 )

[node name="LA4" parent="Pivot/LineA" instance=ExtResource( 4 )]
transform = Transform( 0.973207, 0, 0.229931, 0, 1, 0, -0.229931, 0, 0.973207, -62.6586, 0, 14.8038 )
turn_before_active = 2

[node name="LineB" type="Spatial" parent="Pivot"]

[node name="LB1" parent="Pivot/LineB" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 63.6307, 0, 0 )
turn_before_active = 1

[node name="LB2" parent="Pivot/LineB" instance=ExtResource( 4 )]
transform = Transform( 0.533201, 0, 0.845989, 0, 1, 0, -0.845989, 0, 0.533201, 35.5664, 0, -56.4305 )
turn_before_active = 2

[node name="LB3" parent="Pivot/LineB" instance=ExtResource( 4 )]
transform = Transform( -0.715229, 0, 0.698889, 0, 1, 0, -0.698889, 0, -0.715229, -43.5043, 0, -42.5104 )
turn_before_active = 1

[node name="LB4" parent="Pivot/LineB" instance=ExtResource( 4 )]
transform = Transform( -0.222144, 0, -0.975014, 0, 1, 0, 0.975014, 0, -0.222144, -11.4037, 0, 50.052 )
turn_before_active = 3

[node name="Lamps" type="Spatial" parent="Pivot"]
transform = Transform( 0.537049, 0, 0.843551, 0, 1, 0, -0.843551, 0, 0.537049, 0, 0, 0 )

[node name="LampPole1" parent="Pivot/Lamps" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -68.1304, 0, 0 )

[node name="LampPole2" parent="Pivot/Lamps" instance=ExtResource( 7 )]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -48.1755, 0, 48.1755 )

[node name="LampPole4" parent="Pivot/Lamps" instance=ExtResource( 7 )]
transform = Transform( -0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, 48.1755, 0, 48.1755 )

[node name="LampPole7" parent="Pivot/Lamps" instance=ExtResource( 7 )]
transform = Transform( -2.08616e-07, 0, -1, 0, 1, 0, 1, 0, -2.08616e-07, 1.42131e-05, 0, -68.1305 )

[node name="LampPole8" parent="Pivot/Lamps" instance=ExtResource( 7 )]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -48.1755, 0, -48.1755 )

[node name="LampPole3" parent="Pivot/Lamps" instance=ExtResource( 7 )]
transform = Transform( -0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, -0.258819, 17.6335, 0, 65.8089 )

[node name="StartPoint" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -55, 0, -2 )

[node name="Area" type="Area" parent="StartPoint"]

[node name="RoadCollisionLeft" type="CollisionShape" parent="StartPoint/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.2948, 0, 0 )
shape = SubResource( 1 )

[node name="RoadCollisionRight" type="CollisionShape" parent="StartPoint/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.24361, 0, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 0.939693, 0, 0.34202, 0, 1, 0, -0.34202, 0, 0.939693, -55.4419, 0, 20.1792 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.925246, 0 )
shape = SubResource( 2 )

[node name="CarCrash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
pitch_scale = 0.9
bus = "sound"

[node name="CarEngine" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
pitch_scale = 0.9
bus = "sound"
[connection signal="body_entered" from="StartPoint/Area" to="." method="_on_Area_body_entered"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
